RestaurantManagement/src/objects/Food_Item__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <description>The category of dish - Appetizer, Entree or Dessert</description>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Appetizer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Entree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dessert</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Diet__c</fullName>
        <label>Diet</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Prep_Time__c</fullName>
        <label>Preparation Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Whether the food item should be enabled in the menu or not</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enabled</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Disbaled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of food - Veg, Non-Veg or Vegan</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Vegetarian</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Vegetarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegan</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Food Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Food Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Food Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>